Some more editing

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -82,8 +82,8 @@ from the HPS algorithm. Additionally,
 the combined isolation is required to be
 at most $1.5\,\GeV$. To reject $\Pe/\Pgm \rightarrow$ \Pgth fakes, and to
 reduce the contribution of \Zmm background events, the hadronic tau is 
-also required to pass the tight working point of the anti-$\Pgm$ discriminator
-and the loose working point of the cut-based anti-$\Pe$ discriminator.
+also required to pass the tight working point of the anti-muon discriminator
+and the loose working point of the cut-based anti-electron discriminator.
 
 After this selection there is still a chance that more than one possible 
 \mutau pair exists
@@ -128,8 +128,8 @@ The electron should have a \pT~of at least $24\,\GeV$, $|\eta| < 2.1$, and shoul
 satisfy $d_{xy} < 0.045\,\cm$ and $d_{z} < 0.2\,\cm$. The electron must pass the tight
 working point of the electron MVA ID discriminator, and the
 relative isolation is required to be $I_{\text{rel}}^{\Pe} < 0.1$. The requirements placed on the
-hadronic tau are similar to those required in the \mutau channel, apart from the anti-$\Pgm$ discriminator,
-where the loose working point is required, and the anti-$\Pe$ discriminator, where the medium
+hadronic tau are similar to those required in the \mutau channel, apart from the anti-muon discriminator,
+where the loose working point is required, and the anti-electron discriminator, where the medium
 working point of the MVA discriminator is required.
 
 If there is more than one possible \etau pair, the pair with the largest \pT$^{\Pe}$+\pT$^{\Pgth}$
