--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -802,7 +802,7 @@ MVA isolation discriminator, as well as the cut-based isolation discriminator ba
 on the isolation sum and $p_{\text{T}}^{\text{strip,outer}}$. The MVA-based 
 discriminator performs better than the cut-based discriminator alone.
 
-In order to reduce the $\Pe\rightarrow$\Pgth and $\Pgm\rightarrow$\Pgth fake rates, 
+In order to reduce the $\Pe\rightarrow\Pgth$ and $\Pgm\rightarrow\Pgth$ fake rates, 
 anti-electron and anti-muon discriminators are used. 
 The anti-electron discriminator is a \ac{BDT}-based discriminator trained using input variables such as:
 \begin{itemize}
