--- a/backmatter.tex
+++ b/backmatter.tex
@@ -43,7 +43,7 @@
 \acro{HO}[HO]{Hadron Outer Calorimeter}
 \acro{HE}[HE]{Hadron Endcap Calorimeter}
 \acro{HF}[HF]{Hadron Forward Calorimeter}
-\acro{BSM}[BSM]{Beyond the Standard Model}
+\acro{BSM}[BSM]{beyond the standard model}
 \acro{L1}[L1]{Level-1}
 \acro{HLT}[HLT]{High-level trigger}
 \acro{CSC}[CSC]{Cathode Strip Chamber}
